49
================

03/07/24 csvimport: Copy current vet to neutering vet if neutereddate set #1492
03/07/24 Include weight next to the animal in the medical book #1498
03/07/24 Stop all lower/upper case triggering spambot behaviour
02/07/24 Replace &nbsp; in email headers when extracting from template
02/07/24 Hide visual aids when viewing signed documents #1491
02/07/24 Hide checkout button if template/paytype/method not set
02/07/24 Add ReturnedBy[AdditionalField] support to movement docs #1493
25/06/24 Bug: Bad reference to EntryTypeName in csvimport
22/06/24 Bug: sign document moving both copies to one record #1471
21/06/24 Rename and resurrect HelpingLostPets.com as PetFBI.org
20/06/24 Extra spambot protections to first name field (lcase/ucase/email)
19/06/24 Add audit fields to media table and update them correctly #1471
19/06/24 Add media.MediaSource column to identify how media was uploaded #1295
19/06/24 Audit the hash/signing of documents in linked records audit trail
19/06/24 Indicate in signing icon tooltip how the document was signed
18/06/24 Bug: online forms setting person dateofbirth to none every time
15/06/24 Bug: change user settings removing signature on subsequent saves
15/06/24 Bug: email address being blanked by chooser on options screen
13/06/24 Make sure default breed is applied to new waiting list entries
13/06/24 Work around broken breeds in SavourLife list by suppressing whitespace
11/06/24 Add ANIMALWARNING, PERSONWARNING, ORIGINALOWNERWARNING csv columns
11/06/24 Set owner from originalowner when importing non-shelter animals from csv
10/06/24 Add American Bully publisher breed for PetFinder
06/06/24 Add new animal: Pickup/datebroughtin not being hidden for non-shelter
05/06/24 Add animallocation.PrevAnimalLocationID to assist with reporting
05/06/24 Add {QRS} report token for embeddeding a QR code to the animalview page 
03/06/24 Only set microchipped flag for online forms if a microchip contains value