@@ -1278,16 +1278,18 @@ class FTPPublisher(AbstractPublisher):
         except Exception as err:
             self.log("mkdir %s: already exists (%s)" % (newdir, err))
 
-    def chdir(self, newdir: str, fromroot: str) -> bool:
+    def chdir(self, newdir: str, fromroot: str = "") -> bool:
         """ Changes FTP folder. 
             newdir: The folder to change into
             fromroot: The path to this folder from the root for recovery/reconnection
+                if not supplied, doesn't update currentDir and assumes we are changing
+                directory after reconnection.
             Returns True on success, False for failure """
         if not self.pc.uploadDirectly: return True
         self.log("FTP chdir to %s" % newdir)
         try:
             self.socket.cwd(newdir)
-            self.currentDir = fromroot
+            if fromroot != "": self.currentDir = fromroot
             return True
         except Exception as err:
             self.logError("chdir %s: %s" % (newdir, err), sys.exc_info())
